# suricate_robot

./: .gitignore  CMakeLists.txt  README.md  package.xml
arduino/power_control/: power_control.ino
arduino/power_control_noLED/: power_control_noLED.ino
cfg/: controller.cfg
data/: calibration.json  config_rviz.rviz
docs/: Makefile  make.bat
docs/source/: conf.py  contact.rst  description.rst  index.rst  installation.rst  questions.rst  tutorials.rst
include/robot_micro/: RobotVariables.h  arduino_test.h  robot_odometry_publisher.h  robot_twist_subscriber.h  robot_wrench_subscriber.h
launch/: IFAC_suricate_demo.launch  PC_launcher.launch  PC_launcher_simulation.launch  PC_simulation_project.launch  PID_controller_init.launch  controller_init.launch  odroid_init.launch  raspberry_controller_init.launch  raspberry_init.launch  safety_checker_init.launch
simulation/: robot_micro.perspective  robot_micro_IFAC.perspective  rqt_multiplot_IFAC.xml  rqt_multiplot_config.xml  rviz_config.rviz  rviz_robot_test.rviz
simulation/worlds/: suricate.world  suricate_IFAC.world  suricate_v1.world  suricate_v2.world  suricate_v3.world
src/: launch_node_js_app.sh  load_requirements.sh  robot_controller.py  robot_controller_LQR.py  robot_controller_LQR_V1.py  robot_imu_publisher.py  robot_odometry.py  robot_safety_checker.py  robot_twist_subscriber.cpp  robot_visualization.py  sample_wifi_config_rasp_odroid.txt  useful commands.txt  visual_odometry.cpp
src/classes/: ArduinoSPI.py  ControllerPosition.py  EncoderReader.py  NumericPublisher.py  OdometryPublisher.py  PID.py  PoseRobot.py  arduinoI2C.py  imu_publisher.py  linear_kalman_filer.py  variables.py
src/classes/HT16K33/: EightByEight.py  _HT16K33.py  matrix_symbols.py
src/gazebo_plugins/: wrench_driver.cpp  wrench_driver.h
src/old/: ArduinoSerial.py  ArdunioInterface.py  arduinoI2C.py  robot_current_publisher.cpp  robot_init.launch  robot_odometry_publisher.cpp  robot_odometry_publisher.py  robot_var_publisher.py
src/test/: arduino_test.cpp  kalman_example.cpp  test_adc.cpp  test_arduino.py  test_i2c.cpp  test_pwm.cpp
